<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDarkGreen"

        android:text="@string/button_subtract_from_budget"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:visibility="visible" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_transaction_type"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        android:visibility="visible" />

    <Spinner
        android:id="@+id/spinner_transaction_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        android:dropDownWidth="match_parent"
        android:entries="@array/expense_transactions"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:visibility="visible" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_amount_paid"
        android:textColor="@android:color/black"
        android:visibility="visible" />

    <EditText
        android:id="@+id/text_box_paid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/label_is_transaction_recurring"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/isRecurring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:checked="true"
        android:gravity="center_horizontal" />

    <Spinner
        android:id="@+id/expenses_every"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/transactions_recurring" />

    <Button
        android:id="@+id/datePicker"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showDatePickerDialog"
        android:text="@string/pick_date"
        android:visibility="visible" />

    <EditText
        android:id="@+id/text_displayDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:editable="false"
        android:inputType="none"
        android:textAlignment="center"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_transaction_comment"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/text_box_transactionComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/blank_text"
        android:layout_width="match_parent"
        android:layout_height="70dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorDarkGreen"
        android:orientation="horizontal">

        <Button
            android:id="@+id/MMButtonGVGoToMM"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/button_cancel" />

        <Button
            android:id="@+id/button_clear"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/button_clear" />

        <Button
            android:id="@+id/button_add_income"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/button_done" />
    </LinearLayout>
</LinearLayout>