<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="team_18.financialadvisor.MainActivity">

    <TextView
        android:id="@+id/MMTextViewCurrentBudgetLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/MMButtonBackgroundTitle"
        android:layout_marginTop="12dp"
        android:text="@string/label_current_budget"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/MMEditTextCurrentBudget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/MMTextViewCurrentBudgetLabel"
        android:layout_alignBottom="@+id/MMTextViewCurrentBudgetLabel"
        android:layout_toEndOf="@+id/MMButtonSubtractFromBudget"
        android:background="@android:color/transparent"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/MMEditTextCurrentSavings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/MMTextViewCurrentSavings"
        android:layout_alignBottom="@+id/MMTextViewCurrentSavings"
        android:layout_alignStart="@+id/MMEditTextCurrentBudget"
        android:background="@android:color/transparent"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/MMTextViewFinancialHealthLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/MMEditTextFinancialHealth"
        android:layout_alignBottom="@+id/MMEditTextFinancialHealth"
        android:layout_alignParentStart="true"
        android:text="@string/label_financial_health"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/MMEditTextFinancialHealth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/MMTextViewUpcomingBillsLabel"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="11dp"
        android:background="@android:color/transparent"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/MMTextViewUpcomingBillsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/MMListViewUpcomingBills"
        android:layout_centerHorizontal="true"
        android:text="@string/label_upcoming_bills"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <ListView
        android:id="@+id/MMListViewUpcomingBills"
        android:layout_width="wrap_content"
        android:layout_height="275dp"
        android:layout_above="@+id/MMButtonBackground"
        android:layout_alignStart="@+id/MMButtonBackground"></ListView>

    <ImageView
        android:id="@+id/MMButtonBackground"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:adjustViewBounds="true"
        app:srcCompat="@color/colorDarkGreen" />

    <ImageView
        android:id="@+id/MMButtonBackgroundTitle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        app:srcCompat="@color/colorDarkGreen" />

    <Button
        android:id="@+id/buttonMMGoToAddIncome"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/button_add_to_budget"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/MMButtonSubtractFromBudget"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_alignStart="@+id/MMTextViewCurrentBudgetLabel"
        android:text="@string/button_subtract_from_budget"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/buttonMMGoToNext"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/button_next_screen"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/MMTextViewCurrentSavings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/MMEditTextCurrentBudget"
        android:paddingTop="10dp"
        android:text="@string/label_current_savings"
        android:textColor="@android:color/black"
        android:textSize="20sp" />


</RelativeLayout>
