<resources>

    //Title

    <string name="app_name">Financial Advisor</string>

    //Universal Strings

        //LEGACY STRINGS

    <string name="button_main_menu">Main Menu</string>
    <string name="button_calendar_view">Calendar View</string>
    <string name="button_budget_summary">Budget Summary</string>
    <string name="button_graph_view">Graph View</string>

    //For main activity

    <string name="button_next_screen">To Budget Summary</string>
    <string name="button_previous_screen">To Graph View</string>

    <string name="button_subtract_from_budget">Add Expenses</string>
    <string name="button_add_to_budget">Add Income</string>

    <string name="label_main_menu_title">Main Menu</string>
    <string name="label_upcoming_bills">Upcoming Bills</string>
    <string name="label_current_savings">Current Savings:</string>
    <string name="label_current_budget">Current Budget:</string>
    <string name="label_financial_health">Financial Health:</string>

    //For budget summary

    <string name="label_budget_summary_title">Budget Summary</string>
    <string name="label_money_earned">Earnings</string>
    <string name="label_money_spent">Expenditures</string>
    <string name="label_alerts">Alerts</string>
    <string name="label_transfer_funds">Transfer Funds From</string>
    <string name="label_to">To</string>
    <string name="number_initial_amount">0.00</string>
    <string name="button_transfer_money">Transfer Money</string>

    //For graph view

    <string name="label_graph_view">Graph View</string>
    <string name="label_total_spent">Total Expenditures</string>

    <string name="button_three_months">Past Three Months</string>
    <string name="button_six_months">Past Six Months</string>
    <string name="button_twelve_months">Past Twelve Months</string>

    //For calendar view

    <string name="label_time_frame_week">One Week</string>
    <string name="label_time_frame_month">One Month</string>
    <string name="label_time_frame_year">One Year</string>

    //For income transaction types

    <string-array name="income_transactions">
        <item>Wages</item>
        <item>Commission</item>
        <item>Gift</item>
        <item>Other</item>
    </string-array>
    <string name="radio_wages">Wages</string>
    <string name="radio_other_income">Other Income</string>
    <string name="label_hours_worked">Hours Worked :</string>
    <string name="label_hourly_wage">Hourly Wage :</string>
    <string name="label_total_amount_received">Total Amount Received</string>
    <string name="label_time_frame">Payment Interval:</string>

    //For expenses transaction types
    <string name="pick_date">Next Due On</string>
    <string name="label_transaction_type">Select Type of Transaction</string>
    <string name="label_amount_paid">Amount Paid</string>
    <string name="label_is_transaction_recurring">Is This Transaction Recurring?</string>
    <string name="label_transaction_comment">Transaction Comment</string>

    <string name="button_clear">Clear</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_done">Done</string>


    //For activity_pay_bills.xml

    <string name="button_yes">Yes, It\'s Paid</string>
    <string name="button_go_back">No, Go Back</string>
    <string name="label_confirm_paid">Has this expense been paid?</string>

    <string-array name="expense_transactions">
        <item>Groceries</item>
        <item>Gas</item>
        <item>Rent Payment</item>
        <item>Car Loan</item>
        <item>Mortgage</item>
        <item>Phone Bill</item>
        <item>Internet and TV</item>
        <item>Insurance</item>
        <item>Electricity and Gas</item>
        <item>Water and Waste</item>
        <item>Other</item>
    </string-array>
    //for recurring transactions
    <string-array name="transactions_recurring">
        <item>Weekly</item>
        <item>Bi-Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string-array name="transfer">
        <item>Budget</item>
        <item>Savings</item>
    </string-array>
</resources>
