...
        android:layout_height="wrap_content"
        android:text="@string/label_transaction_type"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radioIncomeType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioWages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_wages" />

        <RadioButton
            android:id="@+id/radioOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_other_income" />

    </RadioGroup>

...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/text_box_income"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
...
